@@ -1,6 +1,7 @@
 2.1.1.dev
 ---------------
 
+- better exception handling/reporting while indexing.
 
 
 2.1.0
